home-automation/magicmirror/ingress.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: magicmirror
  namespace: home-automation
  annotations:
spec:
  rules:
    - host: magicmirror.tang.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: magicmirror
                port:
                  number: 8080
